      kernel interface object files from being loaded on recent Linux
      kernels. This affected custom packages which were prepared with
      nvidia-installer's --add-this-kernel option, for example.
    - Fixed a driver installation failure on Linux kernel 5.17 release
      candidates, where the NVIDIA kernel module failed to build with error
      "implicit declaration of function 'PDE'".

 -- Andreas Beckmann <anbe@debian.org>  Tue, 17 May 2022 15:42:34 +0200

nvidia-graphics-drivers (390.147-2) UNRELEASED; urgency=medium

  * Add xorg-video-abi-25 (Xorg Xserver 21) as alternative dependency.
  * Backport pde_data changes from 470.103.01 to fix kernel module build for
    Linux 5.17.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 16 Feb 2022 18:28:11 +0100

nvidia-graphics-drivers (390.147-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.147 (2021-12-16).
    - Worked around a bug in Meson builds of libglvnd 1.3.0 that caused the
      nvidia_icd.json file to be installed in the wrong location.
    * Improved compatibility with recent Linux kernels.

  [ Andreas Beckmann ]
  * Refresh patches.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 31 Dec 2021 09:31:35 +0100

nvidia-graphics-drivers (390.144-2) UNRELEASED; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 20 Sep 2021 21:13:35 +0200

nvidia-graphics-drivers (390.144-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.144 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211

  [ Andreas Beckmann ]
  * Refresh patches.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 18:15:32 +0200

nvidia-graphics-drivers (390.143-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.143 (2021-04-19).
    * Fixed CVE-2021-1076.