@@ -1,23 +1,22 @@
-From 5b446ec6cf9c37a5a0865cc98367b1f70a402c59 Mon Sep 17 00:00:00 2001
+From db8f561f7e5e254b8db8fa7902e087a1c4aabbe4 Mon Sep 17 00:00:00 2001
 From: Andreas Beckmann <anbe@debian.org>
 Date: Wed, 22 Sep 2021 08:49:14 +0200
 Subject: [PATCH 1/2] backport error on unknown conftests
 
 for easier backporting of future conftest.sh changes
 ---
- conftest.sh          | 12 ++++++++++++
+ conftest.sh          | 11 +++++++++++
  nvidia/nvidia.Kbuild |  4 ++--
- 2 files changed, 14 insertions(+), 2 deletions(-)
+ 2 files changed, 13 insertions(+), 2 deletions(-)
 
 diff --git a/conftest.sh b/conftest.sh
-index abbb636..a965b14 100755
+index 627876a..35f1e52 100755
 --- a/conftest.sh
 +++ b/conftest.sh
-@@ -4516,6 +4516,18 @@ compile_test() {
- 
-             compile_check_conftest "$CODE" "NV_DRM_DEVICE_HAS_PDEV" "" "types"
+@@ -4551,6 +4551,17 @@ compile_test() {
+             compile_check_conftest "$CODE" "NV_ACPI_BUS_GET_DEVICE_PRESENT" "" "functions"
          ;;
-+
+ 
 +        # When adding a new conftest entry, please use the correct format for
 +        # specifying the relevant upstream Linux kernel commit.
 +        #
@@ -33,7 +32,7 @@ index abbb636..a965b14 100755
  }
  
 diff --git a/nvidia/nvidia.Kbuild b/nvidia/nvidia.Kbuild
-index 185d3b5..9375ebb 100644
+index f098edb..329d340 100644
 --- a/nvidia/nvidia.Kbuild
 +++ b/nvidia/nvidia.Kbuild
 @@ -105,7 +105,7 @@ NV_OBJECTS_DEPEND_ON_CONFTEST += $(NVIDIA_OBJECTS)
