@@ -1,4 +1,4 @@
-From c2a0cf09fed824a739f32dcb0bfc28e5df116fde Mon Sep 17 00:00:00 2001
+From f5864b2eff6bc28063a46392c0c50d1e68255c95 Mon Sep 17 00:00:00 2001
 From: Andreas Beckmann <anbe@debian.org>
 Date: Wed, 22 Dec 2021 18:06:40 +0100
 Subject: [PATCH 2/2] backport error on unknown conftests (uvm part)
@@ -8,7 +8,7 @@ Subject: [PATCH 2/2] backport error on unknown conftests (uvm part)
  1 file changed, 1 insertion(+), 1 deletion(-)
 
 diff --git a/nvidia-uvm/nvidia-uvm.Kbuild b/nvidia-uvm/nvidia-uvm.Kbuild
-index d447e23..27e33c1 100644
+index 2f4e1f3..0a4667b 100644
 --- a/nvidia-uvm/nvidia-uvm.Kbuild
 +++ b/nvidia-uvm/nvidia-uvm.Kbuild
 @@ -91,7 +91,7 @@ endif
