@@ -9,7 +9,7 @@ Description: Add -Wa,-mimplicit-it=thumb to CFLAGS if building on ARM
 
 --- a/conftest.sh
 +++ b/conftest.sh
-@@ -195,7 +195,7 @@ build_cflags() {
+@@ -196,7 +196,7 @@ build_cflags() {
      done
  
      if [ "$ARCH" = "arm" ]; then
