@@ -1,8 +1,8 @@
 # kernel support
 0001-backport-error-on-unknown-conftests.patch
 #HAS_UVM#0002-backport-error-on-unknown-conftests-uvm-part.patch
+0003-fix-conftest-includes.patch
 do-div-cast.patch
-kernel-5.7.0-set-memory-array.patch
 
 # build system updates
 bashisms.patch
